Final Update Done 2.23.21 8.50pm

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>Inquiry & Development Stage </b></h5>
           <!-- <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 - <span class="w3-tag w3-teal w3-round">Current</span></h6> -->
           <p>- Negotiate order inquiries with Mr. Nuwan & my contact factories for pricing.</p>
-          <p>- Developing styling samples with factories..</p>
-          <p>- Provide Fabric & Accessories materials to factories matching with techpack for sampling. </p>
+          <p>- Developing styling samples with factories.</p>
+          <p>- Provide Fabric & other materials to factories matching with techpack for sampling. </p>
           <hr>
         </div>
         <div class="w3-container">
@@ -99,18 +99,20 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>-	Follow up FIT/PP samples from factories.</p>
           <p>-	Follow up TOP samples.</p>
           <p>-	Follow up Testing Samples for CTL/ITS/BV.</p>
+          <p>-	Follow up Toxic Certificates/Affidavits etc.</p>
           <p>-	Preparing TRF(Applications) & submit to US team for approval.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Order Execution</b></h5>
           <!-- <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6> -->
-          <p>- Material flow & in-house status with factories internally. </p>
+          <p>- Material flow & in-house status with factories internally and making sure factory meets Planned Cut Date.</p>
+          <p>- Making sure the materials are in accordance with requirement.</p>
           <p>- Conducting PP Meeting.</p>
           <p>- Follow up productivity & Target outputs & other critical issues. </p>
           <p>- Making Inspection Plan with QA Team. </p>
-          <p>- Shipment Booking with Forwarders. </p>
-          <p>- Follow up Shipping Dox & Documentations </p>
+          <p>- Shipment Booking with Forwarders & vessel approvals. </p>
+          <p>- Following up Shipping Dox & Documentations after shipment. </p>
           <br>
         </div>
       </div>
