--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>-	Finalize Time & Action with factory.</p>
           <p>-	Making Delivery Plan.</p>
           <p>-	Follow up FIT/PP samples from factories.</p>
+          <p>-	Making sure factory follows updated Techpack & Trim Sheets from Blue Cherry system in sampling & production.</p>
           <p>-	Follow up TOP samples.</p>
           <p>-	Follow up Testing Samples for CTL/ITS/BV.</p>
           <p>-	Follow up Toxic Certificates/Affidavits etc.</p>
