Updated work experience

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Portfolio of Rubel Kanti Datta</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -13,6 +13,19 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
+
+  <header class="w3-container w3-blue w3-center w3-margin-top">
+    <h1>RESUME OF RUBEL KANTI DATTA</h1>
+    <!-- <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    <a href="https://www.facebook.com/rubel.k.datta" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <i class="fa fa-snapchat w3-hover-opacity"></i>
+    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <i class="fa fa-linkedin w3-hover-opacity"></i> -->
+    <!-- <a href="https://www.linkedin.com/in/rubel-datta-0a220945" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a> -->
+    <!-- <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p> -->
+  </header>
 
   <!-- The Grid -->
   <div class="w3-row-padding">
@@ -76,6 +89,29 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       </div><br>
 
     <!-- End Left Column -->
+
+
+    <!-- JOB EXPERIENCE -->
+    <div class="w3-container w3-card w3-white">
+      <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+      <div class="w3-container">
+        <h5 class="w3-opacity"><b>BGC Trust University, Bangladesh</b></h5>
+        <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012</h6>
+        <p>MBA(Major Finance)</p>
+        <hr>
+      </div>
+      <div class="w3-container">
+        <h5 class="w3-opacity"><b>University of Chittagong</b></h5>
+        <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1999 - 2001</h6>
+        <p>Master Degree(M.Sc)</p>
+        <hr>
+      </div>
+      <div class="w3-container">
+        <h5 class="w3-opacity"><b>University of Chittagong</b></h5>
+        <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1996 - 1999</h6>
+        <p>Bachelor Degree(B.Sc)</p><br>
+      </div>
+    </div>
     </div>
 
     <!-- Right Column -->
@@ -86,20 +122,20 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Inquiry & Development Stage </b></h5>
           <!-- <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 - <span class="w3-tag w3-teal w3-round">Current</span></h6> -->
-          <p>- Negotiate order inquiries with Mr. Nuwan & my contact factories for pricing.</p>
-          <p>- Developing styling samples with factories.</p>
-          <p>- Provide Fabric & other materials to factories matching with techpack for sampling. </p>
+          <p>- Negotiate order inquiries with factories for costing and order placement.</p>
+          <p>- Developing styling samples with factories for workmanship and aesthetic view.</p>
+          <p>- Provide Fabric & other materials to factories matching with techpack for sampling if required. </p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Order Confirmation / Sample Follow Up </b></h5>
           <!-- <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2014</h6> -->
-          <p>-	Finalize Time & Action with factory.</p>
+          <p>-	Finalizing Time & Action with factory.</p>
           <p>-	Making Delivery Plan.</p>
           <p>-	Follow up FIT/PP samples from factories.</p>
           <p>-	Making sure factory follows updated Techpack & Trim Sheets from Blue Cherry system in sampling & production.</p>
           <p>-	Follow up TOP samples.</p>
-          <p>-	Follow up Testing Samples for CTL/ITS/BV.</p>
+          <p>-	Follow up Testing Samples and coordinate with lab like CTL/ITS/BV/TUV etc.</p>
           <p>-	Follow up Toxic Certificates/Affidavits etc.</p>
           <p>-	Preparing TRF(Applications) & submit to US team for approval.</p>
           <hr>
@@ -118,24 +154,27 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
       </div>
 
+      <!-- JOB EXPERIENCE -->
       <div class="w3-container w3-card w3-white">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>JOB EXPERIENCE</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>BGC Trust University, Bangladesh</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012</h6>
-          <p>MBA(Major Finance)</p>
+          <h5 class="w3-opacity"><b>COMTEXTILE(HK) LTD, Chittagong, Bangladesh</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2004 - 2015</h6>
+          <p>Senior Merchandiser</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>University of Chittagong</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1999 - 2001</h6>
-          <p>Master Degree(M.Sc)</p>
+          <h5 class="w3-opacity"><b>INTRADECO APPAREL INC, NEW YORK, USA</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015 - 2021</h6>
+          <p>Merchandising In Charge</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>University of Chittagong</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1996 - 1999</h6>
-          <p>Bachelor Degree(B.Sc)</p><br>
+          <h5 class="w3-opacity"><b>ODYSSEY CRAFT (PVT.) LIMITED</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2021 - RUNNING</h6>
+          <p>Manager, Merchandising</p>
+          <p>Factory: Mouza : Depashai, U.P. : Sombag, Kalampur, P.S: Dhamrai, Dhaka.</p>
+          <p>Dhaka Office: House: 855, Road: 13, Avenue:03, Mirpur DOHS, Dhaka.</p>
         </div>
       </div>
 
