--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
       <!-- JOB EXPERIENCE -->
       <div class="w3-container w3-card w3-white">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>JOB EXPERIENCE</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>JOB EXPERIENCE</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>COMTEXTILE(HK) LTD, Chittagong, Bangladesh</b></h5>
+          <h5 class="w3-opacity"><b>COMTEXTILE(HK) LTD, CHATTOGRAM, BANGLADESH</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2004 - 2015</h6>
           <p>Senior Merchandiser</p>
           <hr>
@@ -171,7 +171,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>ODYSSEY CRAFT (PVT.) LIMITED</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2021 - RUNNING</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2021 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>Manager, Merchandising</p>
           <p>Factory: Mouza : Depashai, U.P. : Sombag, Kalampur, P.S: Dhamrai, Dhaka.</p>
           <p>Dhaka Office: House: 855, Road: 13, Avenue:03, Mirpur DOHS, Dhaka.</p>
