--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
 
-  <header class="w3-container w3-blue w3-center w3-margin-top">
-    <h1>RESUME OF RUBEL KANTI DATTA</h1>
+  <header class="w3-container w3-orange w3-center w3-margin-top">
+    <h1 style="color:white;">RESUME OF RUBEL KANTI DATTA</h1>
     <!-- <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <a href="https://www.facebook.com/rubel.k.datta" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
     <i class="fa fa-instagram w3-hover-opacity"></i>
