current job added

--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>ODYSSEY CRAFT (PVT.) LIMITED</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2021 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Manager, Merchandising</p>
-          <p>Factory: Mouza : Depashai, U.P. : Sombag, Kalampur, P.S: Dhamrai, Dhaka.</p>
-          <p>Dhaka Office: House: 855, Road: 13, Avenue:03, Mirpur DOHS, Dhaka.</p>
+          <h5 class="w3-opacity"><b>HaddadBrands, #1 GLOBAL KID'S APPAREL COMPANY</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2021 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <p>Merchandising Manager</p>
+          <!-- <p>Dhaka</p> -->
+          <!-- <p>Dhaka Office: House: 855, Road: 13, Avenue:03, Mirpur DOHS, Dhaka.</p> -->
         </div>
       </div>
 
