added managerial roles

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-container w3-card w3-white">
       <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
       <div class="w3-container">
-        <h5 class="w3-opacity"><b>BGC Trust University, Bangladesh(++)</b></h5>
+        <h5 class="w3-opacity"><b>BGC Trust University, Bangladesh</b></h5>
         <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012</h6>
         <p>MBA(Major Finance)</p>
       
@@ -113,6 +113,28 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       </div>
     </div>
     </div>
+<!-- BASIC SKILL -->
+<div class="w3-container w3-card w3-white">
+  <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>BASIC SKILLS</h2>
+  <div class="w3-container">
+    <h5 class="w3-opacity"><b>•	Detailed knowledge of Merchandising, forecasting & budget planning.</b></h5>
+    <h5 class="w3-opacity"><b>•	Strong planning/organizational/presentation skills.</b></h5>
+    <h5 class="w3-opacity"><b>•	Ability to work effectively within a team environment and under pressure.</b></h5>
+    <h5 class="w3-opacity"><b>• Good analytical and communication skills.</b></h5>
+    <hr>
+  </div>
+  <div class="w3-container">
+    <h5 class="w3-opacity"><b></b></h5>
+  </div>
+  <div class="w3-container">
+    <h5 class="w3-opacity"><b></b></h5>
+    <h5 class="w3-opacity"><b></b></h5>
+    <!-- <p>Dhaka</p> -->
+    <!-- <p>Dhaka Office: House: 855, Road: 13, Avenue:03, Mirpur DOHS, Dhaka.</p> -->
+  </div>
+</div>
+
+
 
     <!-- Right Column -->
     <div class="w3-twothird">
@@ -120,41 +142,42 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Core Responsibilities</h2>
         <div class="w3-container w3-grey">
-          <h5 class="w3-opacity"><b>Inquiry & Development Stage </b></h5>
+          <h5 class="w3-opacity"><b>Inquiry & Development </b></h5>
           <!-- <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 - <span class="w3-tag w3-teal w3-round">Current</span></h6> -->
           <ul class="fa-ul">
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Negotiate order inquiries with factories for costing and order placement.</li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Developing styling samples with factories for workmanship and aesthetic view.</li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Provide Fabric & other materials to factories matching with techpack for sampling if required. </li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Working with team to analyze technical sheets, understanding products and figure our best pricing.</li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Negotiate with vendors for costing and order placement.</li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Reviewing capacity charts continuously and planning right product with vendors to avoid overlapping.</li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Having a market research of new technologies being practiced in the industry to minimize the cost & increase productivity. </li></p>
           <hr>
         </ul>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Order Confirmation / Sample Follow Up </b></h5>
+          <h5 class="w3-opacity"><b>Marketing & Planning </b></h5>
           <!-- <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2014</h6> -->
           <ul class="fa-ul">
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Finalizing Time & Action with factory.</li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Making Delivery Plan.</li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Follow up FIT/PP samples from factories.</li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Making sure factory follows updated Techpack & Trim Sheets from Blue Cherry system in sampling & production.</li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Follow up TOP samples.</li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Follow up Testing Samples and coordinate with lab like CTL/ITS/BV/TUV etc.</li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Follow up Toxic Certificates/Affidavits etc.</li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Preparing TRF(Applications) & submit to US team for approval.</li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Keeping continuous research on market trends, regulations, limitations, analysing the barriers etc.</li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Good research of materials especially cotton/poly/blended fabrics and figure out options for sustainable products</li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Analyze pricing strategy in order to ensure competitiveness of brand in the market. </li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Good research of materials especially synthetic/blended fabrics to offer options for sustainable products .</li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Pre-planning the inspiration prior every season and leading team/vendors in buying meetings for a fruiteful negotiation.</li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Figure out core competitiveness to bridge the gap between targets & costs .</li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Expanding collarboration with vendors and supply chain.</li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i></li></p>
           <hr>
           </ul>
         </div>
         <div class="w3-container w3-grey">
-          <h5 class="w3-opacity"><b>Order Execution</b></h5>
+          <h5 class="w3-opacity"><b>Execution & Follow up</b></h5>
           <!-- <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6> -->
           <ul class="fa-ul">
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Material flow & in-house status with factories internally and making sure factory meets Planned Cut Date.</li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Making sure the materials are in accordance with requirement.</li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Conducting PP Meeting.</li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Follow up productivity & Target outputs & other critical issues. </li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Making Inspection Plan with QA Team. </li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Shipment Booking with Forwarders & vessel approvals. </li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Following up Shipping Dox & Documentations after shipment. </li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Delegating core responsibilities to team and follow up Plan Cut Dates are met.</li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Motivating team to work out of the box achieve the targets.</li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Having ability to understand the difficulties team faces and hit on time to solve it right away before it's too late.</li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Good skill to track orders on line example(Vendors' Submittal Navigator) to meet deadlines. </li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Coordinating team to achieve productivity and solving critical issues in terms of quality/testing etc. </li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Leading weekly PSR meetings with overseas offices and keep tracking of the orders. </li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i> </li></p>
           <br>
           </ul>
         </div>
