--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Pre-planning the inspiration prior every season and leading team/vendors in buying meetings for a fruiteful negotiation.</li></p>
           <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Figure out core competitiveness to bridge the gap between targets & costs .</li></p>
           <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Expanding collarboration with vendors and supply chain.</li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i></li></p>
+        
           <hr>
           </ul>
         </div>
@@ -172,12 +172,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <!-- <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6> -->
           <ul class="fa-ul">
           <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Delegating core responsibilities to team and follow up Plan Cut Dates are met.</li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Motivating team to work out of the box achieve the targets.</li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Having ability to understand the difficulties team faces and hit on time to solve it right away before it's too late.</li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Good skill to track orders on line example(Vendors' Submittal Navigator) to meet deadlines. </li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Motivating team to work out of the box to achieve the targets.</li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Having ability to understand the challenges team faces and hit on time to solve it right away before it's too late.</li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Compatible to work on web-based portal and on-line Navigator platform(VSN, PLM, RFQ etc). </li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Shouldering responsibilities of team and building confidence to face new challenges. </li></p>
           <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Coordinating team to achieve productivity and solving critical issues in terms of quality/testing etc. </li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Leading weekly PSR meetings with overseas offices and keep tracking of the orders. </li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i> </li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Leading weekly PSR meetings with overseas offices, forcasting issues and solve them. </li></p>
+          
           <br>
           </ul>
         </div>
@@ -228,7 +229,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-container w3-half">
       <!-- <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2014</h6> -->
       <br>
-      <h5>	Mr. Nuwan Hettiarachchi, <br>Regional Director, <br>Haddad Brands, USA, <br>+8801775828467</h5>
+      <h5>	Mr. Nuwan Hettiarachchi, <br>Regional Director, <br>Haddad Brands, USA, <br>+94741699610</h5>
       <!-- <hr> -->
     </div>
     </div>
