--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <div class="w3-container w3-card w3-white">
   <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>BASIC SKILLS</h2>
   <div class="w3-container">
-    <h5 class="w3-opacity"><b>•	Detailed knowledge of Merchandising, forecasting & budget planning.</b></h5>
-    <h5 class="w3-opacity"><b>•	Strong planning/organizational/presentation skills.</b></h5>
+    <h5 class="w3-opacity"><b>•	Detailed knowledge of Merchandising, Forecasting & Planning.</b></h5>
+    <h5 class="w3-opacity"><b>•	Understanding of the apparel and textiles business, presentation skills.</b></h5>
     <h5 class="w3-opacity"><b>•	Ability to work effectively within a team environment and under pressure.</b></h5>
     <h5 class="w3-opacity"><b>• Good analytical and communication skills.</b></h5>
     <hr>
@@ -157,7 +157,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <!-- <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2014</h6> -->
           <ul class="fa-ul">
           <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Keeping continuous research on market trends, regulations, limitations, analysing the barriers etc.</li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Good research of materials especially cotton/poly/blended fabrics and figure out options for sustainable products</li></p>
           <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Analyze pricing strategy in order to ensure competitiveness of brand in the market. </li></p>
           <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Good research of materials especially synthetic/blended fabrics to offer options for sustainable products .</li></p>
           <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Pre-planning the inspiration prior every season and leading team/vendors in buying meetings for a fruiteful negotiation.</li></p>
@@ -174,7 +173,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Delegating core responsibilities to team and follow up Plan Cut Dates are met.</li></p>
           <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Motivating team to work out of the box to achieve the targets.</li></p>
           <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Having ability to understand the challenges team faces and hit on time to solve it right away before it's too late.</li></p>
-          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Compatible to work on web-based portal and on-line Navigator platform(VSN, PLM, RFQ etc). </li></p>
+          <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Compatible to work on web-based portal and on-line Navigator/Platform(VSN, PLM, RFQ etc). </li></p>
           <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Shouldering responsibilities of team and building confidence to face new challenges. </li></p>
           <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Coordinating team to achieve productivity and solving critical issues in terms of quality/testing etc. </li></p>
           <p><li><i class="fa-li fa fa-spinner fa-spin"></i>Leading weekly PSR meetings with overseas offices, forcasting issues and solve them. </li></p>
