--- a/index.html
+++ b/index.html
@@ -113,14 +113,21 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       </div>
     </div>
     </div>
-<!-- BASIC SKILL -->
+
+
+
+
+    <!-- Right Column -->
+    <div class="w3-twothird">
+      <!-- BASIC SKILL -->
 <div class="w3-container w3-card w3-white">
   <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>BASIC SKILLS</h2>
   <div class="w3-container">
     <h5 class="w3-opacity"><b>•	Detailed knowledge of Merchandising, Forecasting & Planning.</b></h5>
-    <h5 class="w3-opacity"><b>•	Understanding of the apparel and textiles business, presentation skills.</b></h5>
+    <h5 class="w3-opacity"><b>•	Understanding of the apparel and textiles business, good presentation skills.</b></h5>
     <h5 class="w3-opacity"><b>•	Ability to work effectively within a team environment and under pressure.</b></h5>
     <h5 class="w3-opacity"><b>• Good analytical and communication skills.</b></h5>
+    <h5 class="w3-opacity"><b>• Experienced in handling various world famous customers like WM, Target, Shopko, KOHL's, Mango, Bershka, Inditex, Gerber Childrenswear, Huggies etc.</b></h5>
     <hr>
   </div>
   <div class="w3-container">
@@ -133,11 +140,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <!-- <p>Dhaka Office: House: 855, Road: 13, Avenue:03, Mirpur DOHS, Dhaka.</p> -->
   </div>
 </div>
-
-
-
-    <!-- Right Column -->
-    <div class="w3-twothird">
     
       <div class="w3-container w3-card w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Core Responsibilities</h2>
