--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-container w3-card w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Core Responsibilities</h2>
-        <div class="w3-container w3-grey">
+        <div class="w3-container w3-teal">
           <h5 class="w3-opacity"><b>Inquiry & Development </b></h5>
           <!-- <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 - <span class="w3-tag w3-teal w3-round">Current</span></h6> -->
           <ul class="fa-ul">
@@ -168,7 +168,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
           </ul>
         </div>
-        <div class="w3-container w3-grey">
+        <div class="w3-container w3-teal">
           <h5 class="w3-opacity"><b>Execution & Follow up</b></h5>
           <!-- <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6> -->
           <ul class="fa-ul">
