--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-container w3-half">
       <!-- <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2014</h6> -->
       <br>
-      <h5>	Mr. Nuwan Hettiarachchi, <br>Regional Director, <br>Haddad Brands, USA, <br>+94741699610</h5>
+      <h5>	Bidhan Chandra Das <br>Director, <br>Stitchtone Apparels Ltd. <br>+8801819345682</h5>
       <!-- <hr> -->
     </div>
     </div>
